fixes night icons not showing up

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,6 @@ h1{
 
 #citySelector{
     padding: 10px;
-    margin-bottom: ;
 }
 #lastResults{
     background-color: lightgrey;
